--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -111,6 +111,8 @@
   &.location-page {
     padding: 0;
     justify-content: space-between;
+    position: relative;
+    z-index: 1;
 
     @include md {
       flex-wrap: nowrap;
@@ -251,21 +253,20 @@
         @include md {
           $min_width: 1200px;
           $max_width: 1644px;
-          $min_font: 142px;
-          $max_font: 155px;
+          $min_font: 117px;
+          $max_font: 145px;
 
           @include fluid-type($min_width, $max_width, $min_font, $max_font);
         
           content: "Deakin";
           display: none;
           position: absolute;
-          // font-size: 165px;
-          height: 100%;
+          height: 0;
           text-transform: uppercase;
           -webkit-transform: rotate(-90deg);
           transform: rotate(-90deg);
-          top: -1px;
-          left: 93%;
+          top: 35%;
+          left: 67%;
           font-family: "UniversLTStd-BoldCn", sans-serif;
           z-index: -1;
           -webkit-text-stroke-width: 1px;
@@ -275,6 +276,8 @@
 
           @include lg {
             display: block;
+            height: 100%;
+            max-height: 15.5rem;
           }
           
         }        
