--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -13,6 +13,8 @@ body {
 .navbar-wrapper {
     padding-left: 0;
     padding-right: 0;
+    position: relative;
+    z-index: 2;
 }
 
 .Navbar {
